apps/worlddatetime/overlays/prod/image.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worlddatetime
spec:
  template:
    spec:
      containers:
      - name: worlddatetime
        image: asia-south1-docker.pkg.dev/worlddatetime-stage/worlddatetime/worlddatetime:v0.0.0-030a497@sha256:edf7d90789d5afc2350b68274608df4bea6bfa955165c189d4d355aeedf113a6
