apps/worlddatetime/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worlddatetime
spec:
  replicas: 4
