apps/worlddatetime/overlays/prod/resource-limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worlddatetime
spec:
  template:
    spec:
      containers:
        - name: worlddatetime

          resources:
            requests:
              cpu: 200m
              memory: 256Mi

            limits:
              cpu: 1000m
              memory: 512Mi
